--- a/RF_Go/Shared/MainLayout.razor
+++ b/RF_Go/Shared/MainLayout.razor
@@ -3,14 +3,20 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+
+@*     <div class="sidebar">
+        @* <NavMenu /> 
+    </div> *@
+    
 
     <main>
-
+            <MudAppBar Fixed="true" Color="Color.Primary" Elevation="1">
+                <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" />
+                <MudSpacer />
+                <MudIconButton Icon="@Icons.Material.Filled.FavoriteBorder" Color="Color.Inherit" Edge="Edge.End" />
+                <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End" />
+            </MudAppBar>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
         <article class="content px-4">
@@ -18,3 +24,4 @@
         </article>
     </main>
 </div>
+
